@@ -283,7 +283,8 @@ def main():
 
             if s.state != lt.torrent_status.seeding:
                 state_str = ['queued', 'checking', 'downloading metadata', \
-                             'downloading', 'finished', 'seeding', 'allocating']
+                             'downloading', 'finished', 'seeding', \
+                             'allocating', 'checking fastresume']
                 out += state_str[s.state] + ' '
 
                 out += '%5.4f%% ' % (s.progress*100)
